force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__Active__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the plan is still active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>