force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__Amount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Amount__c</fullName>
    <description>Charge price for Subscription Plan</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>