force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__Frequency__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Frequency__c</fullName>
    <description>Frequency for the charge of the listing</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>