force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__StripeSubscriptionPlanId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeSubscriptionPlanId__c</fullName>
    <description>External Stripe Id for Subscription Plans</description>
    <externalId>true</externalId>
    <label>Stripe Subscription Plan Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>