force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__StripeSubscriptionPlanIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeSubscriptionPlanIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Stripe Id for Subscription Plans</description>
    <externalId>true</externalId>
    <label>Stripe Subscription Plan Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>