force-app/main/default/objects/sfcma__SubscriptionPlan__c/fields/sfcma__TrialPeriodDays__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TrialPeriodDays__c</fullName>
    <description>The number of days in which the customer can trial.</description>
    <label>Trial Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>