force-app/main/default/objects/sfcma__SubscriptionPlan__c/listViews/sfcma__All.listView-meta.xml
<ListView>
    <fullName>sfcma__All</fullName>
    <columns>NAME</columns>
    <columns>sfcma__ListingName__c</columns>
    <columns>sfcma__AdditionalDetails__c</columns>
    <columns>sfcma__Frequency__c</columns>
    <columns>sfcma__Active__c</columns>
    <columns>sfcma__Amount__c</columns>
    <columns>sfcma__Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>